<?xml version="1.0"?>
<package>
  <name>teraranger_array_tutorials</name>
  <version>0.0.0</version>
  <description>The teraranger_array_tutorials package</description>

  <maintainer email="pierre-louis.kabaradjian@terabee.com">Pierre-Louis Kabaradjian</maintainer>

  <license>TODO</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <url type="repository" https://github.com/Terabee/teraranger_array_tutorials</url>
  <url type="website" http://wiki.ros.org/teraranger_array_tutorials</url>

  <author email="pierre-louis.kabaradjian@terabee.com">Kabaradjian Pierre-Louis</author>
  <author email="baptiste.potier@terabee.com">Baptiste Potier</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
